Opened 10 years ago
Closed 10 years ago
#5927 closed defect (fixed)
Automatic bitstream filters fail for concatenated h264
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | undetermined |
| Version: | git-master | Keywords: | h264 mov |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
The following works as expected (2792 frames):
$ ffmpeg -i thezerotheorem-tlr1_h1080p.mov -bsf h264_mp4toannexb -vcodec copy -an out.ts
Automatic bitstream filtering fails for this sample:
$ ffmpeg -i thezerotheorem-tlr1_h1080p.mov -vcodec copy -an out.ts
ffmpeg version N-82226-g5a4935c Copyright (c) 2000-2016 the FFmpeg developers
built with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl --enable-gnutls
libavutil 55. 35.100 / 55. 35.100
libavcodec 57. 66.101 / 57. 66.101
libavformat 57. 57.100 / 57. 57.100
libavdevice 57. 2.100 / 57. 2.100
libavfilter 6. 66.100 / 6. 66.100
libswscale 4. 3.100 / 4. 3.100
libswresample 2. 4.100 / 2. 4.100
libpostproc 54. 2.100 / 54. 2.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'thezerotheorem-tlr1_h1080p.mov':
Metadata:
major_brand : qt
minor_version : 537199360
compatible_brands: qt
creation_time : 2014-07-07T20:43:17.000000Z
com.apple.finalcutstudio.media.uuid: 48734455-56AD-4631-8142-90BEC3C0C0B7
timecode : 00:00:05:00
Duration: 00:01:56.45, start: 0.000000, bitrate: 9999 kb/s
Stream #0:0(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p(tv, bt709), 1920x1080, 9856 kb/s, 23.98 fps, 23.98 tbr, 24k tbn, 48k tbc (default)
Metadata:
creation_time : 2014-07-07T20:43:17.000000Z
handler_name : Apple Video Media Handler
encoder : H.264
Stream #0:1(eng): Data: none (tmcd / 0x64636D74), 0 kb/s (default)
Metadata:
creation_time : 2014-07-07T20:43:17.000000Z
handler_name : Time Code Media Handler
timecode : 00:00:05:00
Stream #0:2(eng): Audio: aac (LC) (mp4a / 0x6134706D), 44100 Hz, stereo, fltp, 123 kb/s (default)
Metadata:
creation_time : 2014-07-07T20:43:17.000000Z
handler_name : Apple Sound Media Handler
Output #0, mpegts, to 'out.ts':
Metadata:
major_brand : qt
minor_version : 537199360
compatible_brands: qt
timecode : 00:00:05:00
com.apple.finalcutstudio.media.uuid: 48734455-56AD-4631-8142-90BEC3C0C0B7
encoder : Lavf57.57.100
Stream #0:0(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p(tv, bt709), 1920x1080, q=2-31, 9856 kb/s, 23.98 fps, 23.98 tbr, 90k tbn, 24k tbc (default)
Metadata:
creation_time : 2014-07-07T20:43:17.000000Z
handler_name : Apple Video Media Handler
encoder : H.264
Stream mapping:
Stream #0:0 -> #0:0 (copy)
Press [q] to stop, [?] for help
[AVBSFContext @ 0x2a6f440] Failed to send packet to filter h264_mp4toannexb for stream 0
av_interleaved_write_frame(): Invalid argument
frame= 241 fps=0.0 q=-1.0 Lsize= 13002kB time=00:00:09.92 bitrate=10729.6kbits/s speed= 684x
video:12125kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 7.230386%
Conversion failed!
Possibly related to 34751f8313a41bf94e004ffa9491f35d96763558, 76729970049fe95659346503f7401a5d869f9959 and mpv issue 918
Change History (2)
comment:1 by , 10 years ago
comment:2 by , 10 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Should be fixed in fba2a8a254997e0db39a30438e96e5f3e44c669a
Note:
See TracTickets
for help on using tickets.



Sample uploaded to http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket5927/